tests/baselines/reference/destructuring.errors.txt
b.ts(1,14): error TS18059: Destructuring deferred imports isn't allowed.


==== a.ts (0 errors) ====
    export function foo() {
        console.log("foo from a");
    }
    
==== b.ts (1 errors) ====
    import defer { foo } from "a";
                 ~
!!! error TS18059: Destructuring deferred imports isn't allowed.
    
    foo();